[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "bevy_ldtk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = {version = "0.5", default-features = false, features = ["render"]}
ldtk = {path = "../ldtk", version = "0.1"}
serde_json = "1.0"
