[package]
description = "Auto generated LDtk bindings"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ldtk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
